[gd_scene load_steps=36 format=3 uid="uid://x8noxqx3n1ge"]

[ext_resource type="Texture2D" uid="uid://dhdhc42wmrb05" path="res://ASSETS/Deltarune Undertale Sprites7.png" id="1_hxi8c"]
[ext_resource type="Script" uid="uid://dbpafj46wy2rc" path="res://ENEMIES/follow_enemy.gd" id="1_t1t4g"]
[ext_resource type="PackedScene" uid="uid://1piv26fr88nh" path="res://ENEMIES/bullet.tscn" id="2_muq8e"]
[ext_resource type="PackedScene" uid="uid://b06uac3jqkxk5" path="res://SYSTEMS/HITBOX|HURTBOX/hitbox.tscn" id="3_t1sgq"]
[ext_resource type="Shader" uid="uid://coyyspyiw13hi" path="res://SYSTEMS/pixel.gdshader" id="4_7nvb3"]
[ext_resource type="Texture2D" uid="uid://yh07u7k4h6o3" path="res://ENEMIES/ENEMY_SPRITES/STAR_ENEMY1-sheet.png" id="5_muq8e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t1t4g"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hxi8c"]
radius = 92.0869

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6glu5"]
shader = ExtResource("4_7nvb3")
shader_parameter/outline_color = Color(0.945098, 0.964706, 0.941176, 1)
shader_parameter/corner_pixel = true

[sub_resource type="AtlasTexture" id="AtlasTexture_xbvk6"]
atlas = ExtResource("5_muq8e")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkggs"]
atlas = ExtResource("5_muq8e")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m26nm"]
atlas = ExtResource("5_muq8e")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqx3u"]
atlas = ExtResource("5_muq8e")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3bsv"]
atlas = ExtResource("5_muq8e")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sumfm"]
atlas = ExtResource("5_muq8e")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sye6"]
atlas = ExtResource("5_muq8e")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vseie"]
atlas = ExtResource("5_muq8e")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0bhs"]
atlas = ExtResource("5_muq8e")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rcod"]
atlas = ExtResource("5_muq8e")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8s2s"]
atlas = ExtResource("5_muq8e")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfer5"]
atlas = ExtResource("5_muq8e")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2s51c"]
atlas = ExtResource("5_muq8e")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7p4xe"]
atlas = ExtResource("5_muq8e")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_diwo8"]
atlas = ExtResource("5_muq8e")
region = Rect2(128, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebv10"]
atlas = ExtResource("5_muq8e")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jng8u"]
atlas = ExtResource("5_muq8e")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w0yf"]
atlas = ExtResource("5_muq8e")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_47bgp"]
atlas = ExtResource("5_muq8e")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq8xp"]
atlas = ExtResource("5_muq8e")
region = Rect2(128, 224, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_l75hd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbvk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkggs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m26nm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqx3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3bsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sumfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sye6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vseie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0bhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rcod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8s2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfer5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2s51c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7p4xe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_diwo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebv10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jng8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w0yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47bgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq8xp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_qe2jr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rsgja"]
resource_name = "default"
length = 2.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_muq8e"]
resource_name = "kamikaze"
step = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [1.0],
"method": &"shoot"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u8lwm"]
_data = {
&"RESET": SubResource("Animation_qe2jr"),
&"default": SubResource("Animation_rsgja"),
&"kamikaze": SubResource("Animation_muq8e")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_7nvb3"]
radius = 12.0

[node name="follow_enemy" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_t1t4g")
bullet_node = ExtResource("2_muq8e")
alpha = 0.3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_t1t4g")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_hxi8c")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_hxi8c")

[node name="Hitbox" parent="." instance=ExtResource("3_t1sgq")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_6glu5")
sprite_frames = SubResource("SpriteFrames_l75hd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_u8lwm")
}
autoplay = "default"

[node name="DeathDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathDetection"]
shape = SubResource("CircleShape2D_7nvb3")

[node name="Speed" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_entered" from="DeathDetection" to="." method="_on_death_detection_body_entered"]
[connection signal="timeout" from="Speed" to="." method="_on_speed_timeout"]
